# supply-chain-scanner

./: .coveragerc  .gitignore  .gitmodules  Makefile  README.md  build.py  requirements-test.txt  vendor.txt
.github/workflows/: malware-db.yml  release.yml
src/scs/: __main__.py  cli.py  enrich.py  findings.py  http.py  installed.py  malware_db.py  repo.py  shellcmd.py  version.py  yaml_lite.py
src/scs/_vendor/: __init__.py
src/scs/parsers/: __init__.py  dockerfile.py  dotnet.py  gh_actions.py  gitlab_ci.py  golang.py  npm.py  python.py  rust.py
src/scs/report/: assets.py  html.py
tests/: conftest_path.py  test_io_encoding.py  test_malware_db.py  test_parsers.py  test_shellcmd.py  test_yaml_lite.py
tests/fixtures/clean-project/: Dockerfile  package-lock.json  package.json
tests/fixtures/dockerfile-bad/: Dockerfile
tests/fixtures/dockerfile-multistage/: Dockerfile
tests/fixtures/dotnet-bad/: App.csproj
tests/fixtures/dotnet-cpm/: Directory.Packages.props
tests/fixtures/dotnet-cpm-nested/: Directory.Packages.props
tests/fixtures/dotnet-packages-config/: Old.csproj  packages.config
tests/fixtures/gitlab-ci-rich/: .gitlab-ci.yml
tests/fixtures/go-bad/: go.mod
tests/fixtures/go-rich/: go.mod  go.sum
tests/fixtures/malware-tanstack/: package.json
tests/fixtures/npm-rich/: package-lock.json  package.json
tests/fixtures/npm-unpinned/: package.json
tests/fixtures/npm-workspace-array/: package-lock.json  package.json
tests/fixtures/python-rich/: Pipfile  pyproject.toml  setup.py  setup.py.broken
tests/fixtures/rust-rich/: Cargo.toml
(+28 files in other folders)
